@@ -45,6 +45,7 @@ Poeple/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		patches for MultiplexLayer
     * Graham Perks: Atlas works with GL_CULL_FACE
 		FastDirector doesn't leak autorelease pool patch
+	* Hans Larsen: Possibility to create empty menus
     * Ishaq Malik: patches for CocosNode
     * Jacob Eiting: patches for Primitives
     * Jason Booth (slipster216): author of EaseAction
